--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "lint": "eslint ./ --fix"
   },
   "dependencies": {
+    "eslint": "^9.16.0",
     "nuxt": "^3.14.1592",
+    "nuxt-lucide-icons": "1.0.5",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "eslint": "^9.16.0"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.10.0",
